Change Name Binary

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: BlankOn Developers <BlankOn-Dev@googlegroups.com>
 Standards-Version: 3.9.1
 Build-Depends: cdbs, debhelper (>= 7.3.5)
 
-Package: text
+Package: note5
 Architecture: all
 Depends: html5app 
 Description: HTML5 Plain Text Editor
