--- a/debian/note5.desktop
+++ b/debian/note5.desktop
@@ -2,7 +2,7 @@
 Name=Note5
 Comment=HTML5 Plain Text Editor
 Exec=html5app /usr/share/note5/
-Icon=
+Icon=note5
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Game;LogicGame;
