Change: debian/control section editor

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: note5
-Section: text
+Section: editor
 Priority: optional
 Maintainer: BlankOn Developers <BlankOn-Dev@googlegroups.com>
 Standards-Version: 3.9.1
