--- a/debian/note5.desktop
+++ b/debian/note5.desktop
@@ -5,5 +5,5 @@ Exec=html5app /usr/share/note5/
 Icon=note5
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;Game;LogicGame;
+Categories=GNOME;GTK;Utility;TextEditor;
 StartupNotify=true
